<resources>
    <string name="app_name">frontend</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_username">Enter your first name and, if you wish, digits:</string>
    <string name="Username">Username</string>
    <string name="check_username">Check username</string>
    <string name="contentDescriptionLogoBig">The picture shows the text "the Game of" and the word LIFE in colorful letters.</string>
    <string name="createGame">CREATE GAME</string>
    <string name="joinGame">JOIN GAME</string>
    <string name="enterYourLobbyCode">ENTER YOUR LOBBY CODE</string>
    <string name="line">----</string>
    <string name="go">GO!</string>
    <string name="X">X</string>
    <string name="start">START</string>
    <string name="ID0000">ID: 0000</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="usernameHint">Please choose a username consisting only of letters and, if you like, digits at the end.</string>
    <string name="MyJob">My Job</string>
    <string name="MyInvestments">My Investments</string>
    <string name="StatisticsOtherPlayers">Statistics Players</string>
    <string name="RollDice">Roll the Dice</string>
    <string name="Pickpocket">Pickpocket</string>
    <string name="ReportCheater">Report Cheater</string>
    <string name="choosePath">Do you want to enter the workforce right away or do you want to go to college for 100k to possibly get a better paying job later?</string>
    <string name="CollegePath">Go to college!</string>
    <string name="CareerPath">Start a career!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_none">Job: none</string>
    <string name="money">"Money: "</string>
    <string name="college_degree">"College Degree: "</string>
    <string name="job">"Job: "</string>
    <string name="houses">"#houses: "</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="cheat">Cheat</string>
    <string name="spin">Spin</string>
    <string name="and_the_winner_is">And the winner is…</string>
    <string name="choose_a_career">Choose a career</string>
    <string name="choose">Choose</string>
    <string name="choose_a_house">Choose a house</string>
    <string name="choose_to_teleport">"Teleport or stay?"</string>
    <string name="stop_cell">STOP CELL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="i_understand">I understand</string>
    <string name="actionCell">Action Cell: If you land on this cell, an action is performed. It can affect your money or the money of your fellow players, changing the game. Both you and your fellow players can see what has happened.</string>
    <string name="familyCell">Family Cell: It is time to expand the family. If you land on this field, you will get a peg added to your car. These are then sold for 50k/peg when you retire.</string>
    <string name="careerCell">Career Cell: Time for a new job. Choose one of two professions. Your current profession may also be included. Let`s see what life has in store for you.</string>
    <string name="houseCell">House Cell: Time to buy a house. You can choose between two houses. Look carefully at the prices. Fate will decide whether the house is sold at the red or black sell price when you retire!</string>
    <string name="nothingCell">Wait Cell: This cell appears after stop cells. You have just made a difficult life decision. You are now at a new stage in your life. Family, wedding, early retirement? The decision was entirely up to you.</string>
    <string name="stopCell">Stop Cell: It is time for an important life decision. Will you pass your exams? Will you get married, start a family? Do you want to retire early? Make important decisions at stop cells.</string>
    <string name="retireCell">Retirement Cell: Yey finally retired. Your houses and family members are sold and the one with the most money wins. The earlier you retire, the more money you get on top.</string>
    <string name="teleportCell">Teleport Cell: You have the option to teleport forward by 2 cells, advancing your progress, or remain in your current cell, keeping your existing position. The choice is yours.</string>
    <string name="cashCell">Cash Cell: If you pass this field you will receive your salary. If you land on this field, you will also receive your bonus salary. It is pay day!</string>
    <string name="cellQuestion">Cells?</string>
    <string name="actioncard">ACTIONCARD</string>
    <string name="end_game">End game</string>
</resources>