<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayoutCareerPath"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CareerPathFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choosePathText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/choosePath"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCollege"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/CollegePath" />

        <Button
            android:id="@+id/btnCareer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/CareerPath" />
    </LinearLayout>

</FrameLayout>