<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".fragments.LegendFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/describtionLegend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="Cell Legend"
            android:textAlignment="textStart"
            android:textColor="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBacktoGame"
            android:layout_width="140dp"
            android:layout_height="46dp"
            android:layout_weight="10"
            android:background="@drawable/x_button_background"
            android:text="@string/X"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/actionCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_action_background" />

        <TextView
            android:id="@+id/actionCellDescribtion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="@string/actionCell"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cashCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_payday_background" />

        <TextView
            android:id="@+id/cashCellDescribtion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/cashCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/familyCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_addpeg_background" />

        <TextView
            android:id="@+id/familyCellDescribtion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/familyCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/careerCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_career_background" />

        <TextView
            android:id="@+id/careerCellDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/careerCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/houseCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_house_background" />

        <TextView
            android:id="@+id/houseCellDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/houseCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/teleportDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_teleport_background" />

        <TextView
            android:id="@+id/teleportDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/teleportCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nothingCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_nothing_background" />

        <TextView
            android:id="@+id/nothingCellDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/nothingCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/stopCellDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cell_stop_background" />

        <TextView
            android:id="@+id/stopCellDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/stopCell"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/retirementDraw"
            android:layout_width="43dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/retirement_background" />

        <TextView
            android:id="@+id/retirementDesc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:textAllCaps="false"
            android:text="@string/retireCell"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>